--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -15,8 +15,10 @@ generation:
   auth:
     oAuth2ClientCredentialsEnabled: true
     oAuth2PasswordEnabled: false
+  mockServer:
+    disabled: false
 python:
-  version: 0.2.0
+  version: 0.3.0
   additionalDependencies:
     dev: {}
     main: {}
