Use python-version: 3.8 in testing

--- a/.github/workflows/speakeasy-testing.yaml
+++ b/.github/workflows/speakeasy-testing.yaml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version-file: ".python-version"
+          python-version: "3.8"
       - run: pipx install "poetry~=1.8"
       - run: poetry install
       - run: curl -fsSL https://go.speakeasy.com/cli-install.sh | sh
