--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -17,6 +17,8 @@ generation:
     oAuth2PasswordEnabled: false
   mockServer:
     disabled: false
+  tests:
+    generateNewTests: true
 mockserver:
   version: ""
   clientServerStatusCodesAsErrors: true
@@ -32,7 +34,7 @@ mockserver:
   outputModelSuffix: output
   responseFormat: envelope-http
 python:
-  version: 0.3.1
+  version: 0.4.0
   additionalDependencies:
     dev: {}
     main: {}
